--- a/dashboard.html
+++ b/dashboard.html
@@ -67,7 +67,7 @@
         <div class="main">
             <div class="topbar">
                 <div class="logo-wa">
-                    <img src="poto/WhatsApp_Image_2024-10-03_at_14.21.41-removebg-preview 2.png" alt="PAUD">
+                    <img src="WhatsApp_Image_2024-10-03_at_14.21.41-removebg-preview 2.png" alt="PAUD">
                 </div>
                 <div class="PAUD">
                     <h3>Michelle</h3>
@@ -80,17 +80,17 @@
                 </div>
                 <div class="notifikasi">
                     <a href="#">
-                        <img src="poto/mdi_bell-notification-outline.png" alt="notifikasi">
+                        <img src="mdi_bell-notification-outline.png" alt="notifikasi">
                     </a>
                 </div>
                 <div class="help">
                     <a href="#">
-                        <img src="poto/codicon_question.png" alt="help">
+                        <img src="codicon_question.png" alt="help">
                     </a>
                 </div>
                 <div class="pengaturan">
                     <a href="#">
-                        <img src="poto/lets-icons_setting-line.png" alt="setting">
+                        <img src="lets-icons_setting-line.png" alt="setting">
                     </a>
                 </div>
                 <div class="user">
@@ -106,7 +106,7 @@
 
                     <div class="cardHeader">
                         <h2>Dashboard saya</h2>
-                        <img class="poto-folder" src="poto/material-symbols_folder-outline.png" alt="saya" width="50px">
+                        <img class="poto-folder" src="material-symbols_folder-outline.png" alt="saya" width="50px">
 
                     </div>
                     <table>
