--- a/komputer.html
+++ b/komputer.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatitble" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
+    <title>Komputer</title>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="dashboard.css" />
+    <link rel="stylesheet" href="komputer.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -120,7 +120,7 @@
                 <div class="recentOrders">
 
                     <div class="cardHeader">
-                        <h2>Dashboard saya</h2>
+                        <h2>Komputer</h2>
                         <img class="poto-folder" src="material-symbols_folder-outline.png" alt="saya" width="50px">
 
                     </div>
